# mesh

./: .gitignore  ARCHITECTURE_REFACTORING.md  CLAUDE.md  Cargo.toml  PERFORMANCE_SECTIONS.md  README.md  SHARED_TASK_NOTES.md  TEXT_RENDERING_TODO.md  codex-until-limit.sh  flake.nix  nohup.out  todo.md
.planning/prototypes/phase43/: Cargo.toml  README.md
.planning/prototypes/phase43/evidence/: blitz-reference.md  focused-crate.md
.planning/prototypes/phase43/fixtures/: phase43-scenarios.json
.planning/prototypes/phase43/output/: blitz-reference.json  focused-crate.json
.planning/prototypes/phase43/src/: lib.rs
crates/core/extension/module/: Cargo.toml
crates/core/extension/module/src/: lib.rs  lifecycle.rs  manifest.rs  package.rs
crates/core/extension/module/src/manifest/: graph.rs  json.rs  load.rs  model.rs  tests.rs  toml.rs
crates/core/extension/module/src/package/: error.rs  installed_graph.rs  module_manifest.rs  paths.rs  root.rs  tests.rs  util.rs
crates/core/extension/plugin/: Cargo.toml
crates/core/extension/plugin/src/: lib.rs  manifest.rs  package.rs
crates/core/frontend/compiler/: Cargo.toml  README.md
crates/core/frontend/compiler/src/: compile.rs  expr.rs  lib.rs  render.rs  style.rs  tags.rs
crates/core/frontend/host/: Cargo.toml
crates/core/frontend/host/src/: lib.rs
crates/core/frontend/render/: Cargo.toml  README.md
crates/core/frontend/render/src/: accesskit_adapter.rs  anyrender_adapter.rs  display_list.rs  lib.rs  library_adapters.rs  parley_adapter.rs  proof.rs  render_object.rs
crates/core/frontend/render/src/surface/: buffer.rs  debug_overlay.rs  glyph.rs  icon.rs  mod.rs  painter.rs  profiling.rs  text.rs
crates/core/frontend/render/tests/: paint_perf_scenarios.rs
crates/core/presentation/: Cargo.toml
crates/core/presentation/src/: dev_window.rs  lib.rs
crates/core/presentation/src/wayland_surface/: backend.rs  handlers.rs  mod.rs  popup.rs  state.rs
crates/core/runtime/backend/: Cargo.toml
crates/core/runtime/backend/src/: lib.rs
crates/core/runtime/host/: Cargo.toml
crates/core/runtime/host/src/: lib.rs
crates/core/runtime/sandbox/: Cargo.toml
crates/core/runtime/sandbox/src/: lib.rs
crates/core/runtime/scripting/: Cargo.toml
crates/core/runtime/scripting/src/: backend.rs  chunk_cache.rs  context.rs  host_api.rs  lib.rs  pool.rs  storage.rs  util.rs
crates/core/runtime/scripting/src/backend/: command.rs  errors.rs  exec.rs  exec_stream.rs  logging.rs  runtime.rs  tests.rs
crates/core/runtime/scripting/src/context/: element_ref.rs  errors.rs  lookup.rs  proxy.rs  runtime.rs  state.rs  tests.rs
crates/core/shell/: Cargo.toml
crates/core/shell/src/: lib.rs
crates/core/shell/src/shell/: backend.rs  component.rs  discovery.rs  file_watch.rs  ipc.rs  layout.rs  mod.rs  module_config.rs  runtime.rs  service.rs  sounds.rs  surface_layout.rs  tests.rs  types.rs
crates/core/shell/src/shell/backend/: candidates.rs  lifecycle.rs  mod.rs  spawn.rs  supervision.rs
crates/core/shell/src/shell/component/: animation.rs  catalog.rs  composition.rs  diagnostics.rs  input.rs  interaction_state.rs  memo.rs  rendering.rs  runtime.rs  runtime_tree.rs  shell_component.rs  tests.rs  tooltip.rs
crates/core/shell/src/shell/layout/: focus.rs  hit_test.rs  mod.rs  scroll.rs
crates/core/shell/src/shell/runtime/: debug.rs  mod.rs  profiling.rs  reload.rs  render.rs  request.rs  service_state.rs  theme.rs  wayland.rs
crates/core/surface-config/: Cargo.toml
crates/core/surface-config/src/: lib.rs
crates/mesh-cli/: Cargo.toml
crates/mesh-cli/src/: main.rs
crates/mesh-component/: Cargo.toml
crates/mesh-component-backend/: Cargo.toml
crates/mesh-component-backend/src/: lib.rs
crates/mesh-component/src/: i18n.rs  lib.rs  meta.rs  parser.rs  schema.rs  style.rs  template.rs
crates/mesh-component/src/parser/: markup.rs  styles.rs
crates/mesh-config/: Cargo.toml
crates/mesh-config/src/: lib.rs
crates/mesh-core/: Cargo.toml
crates/mesh-core/src/: lib.rs  shell.rs
crates/mesh-core/src/shell/: backend.rs  component.rs  ipc.rs  layout.rs  mod.rs  painter.rs  service.rs  sounds.rs  surface_layout.rs  types.rs
crates/mesh-core/src/shell/render/: debug_overlay.rs  mod.rs  painter.rs
crates/mesh-diagnostics/: Cargo.toml
crates/mesh-events/: Cargo.toml
crates/mesh-lsp/: Cargo.toml
crates/mesh-lsp/src/: backend.rs  diagnostics.rs  document.rs  main.rs  plugin_registry.rs  util.rs
crates/mesh-lsp/src/analyzer/: script.rs  style.rs  template.rs
crates/mesh-lsp/src/knowledge/: css.rs  mesh_api.rs  mod.rs  tags.rs
crates/mesh-plugin/: Cargo.toml
crates/mesh-plugin/src/: lib.rs  lifecycle.rs  manifest.rs
crates/mesh-render-engine/: Cargo.toml
crates/mesh-render-engine/src/: accessibility.rs  compile.rs  expr.rs  lib.rs  render.rs  style.rs  tags.rs
crates/mesh-render-engine/src/surface/: buffer.rs  debug_overlay.rs  icon.rs  mod.rs  painter.rs  text.rs
crates/mesh-render-engine/src/surface/bridge/: dev_window.rs
crates/mesh-renderer/: Cargo.toml
crates/mesh-renderer/src/: buffer.rs  debug_overlay.rs  dev_window.rs  icon.rs  layer_shell.rs  lib.rs  painter.rs  surface.rs  text.rs
crates/mesh-runtime/: Cargo.toml
crates/mesh-runtime/src/: lib.rs  protocol.rs
crates/mesh-scripting/: Cargo.toml
crates/mesh-scripting/src/: backend.rs  component.rs  context.rs  host_api.rs  lib.rs
crates/mesh-ui/: Cargo.toml
crates/mesh-ui/src/: accessibility.rs  events.rs  layout.rs  lib.rs  style.rs  tree.rs
crates/tools/cli/: Cargo.toml
crates/tools/cli/src/: main.rs
crates/tools/lsp/: Cargo.toml  README.md
crates/tools/lsp/src/: backend.rs  definition.rs  diagnostics.rs  document.rs  format.rs  hover.rs  lib.rs  main.rs  module_registry.rs  plugin_registry.rs  semantic_tokens.rs  util.rs
crates/tools/lsp/src/analyzer/: mod.rs  script.rs  style.rs  template.rs
crates/tools/lsp/src/knowledge/: css.rs  mesh_api.rs  tags.rs
crates/tools/lsp/src/manifest/: complete.rs  cursor.rs  diagnostics.rs  hover.rs  mod.rs  schema.rs
crates/tools/lsp/tests/: real_manifests.rs
(+1609 files in other folders)
