[workspace]
resolver = "2"
members = [
    "crates/core/shell",
    "crates/core/extension/module",
    "crates/core/foundation/capability",
    "crates/core/foundation/events",
    "crates/core/foundation/config",
    "crates/core/foundation/theme",
    "crates/core/foundation/locale",
    "crates/core/foundation/diagnostics",
    "crates/core/platform/wayland",
    "crates/core/runtime/host",
    "crates/core/extension/service",
    "crates/core/ui/component",
    "crates/core/ui/elements",
    "crates/core/ui/icon",
    "crates/core/runtime/scripting",
    "crates/core/ui/render",
    "crates/core/runtime/backend",
    "crates/tools/cli",
    "crates/core/foundation/debug",
    "crates/tools/lsp",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
mesh-core-shell = { path = "crates/core/shell" }
mesh-core-module = { path = "crates/core/extension/module" }
mesh-core-capability = { path = "crates/core/foundation/capability" }
mesh-core-events = { path = "crates/core/foundation/events" }
mesh-core-config = { path = "crates/core/foundation/config" }
mesh-core-theme = { path = "crates/core/foundation/theme" }
mesh-core-locale = { path = "crates/core/foundation/locale" }
mesh-core-diagnostics = { path = "crates/core/foundation/diagnostics" }
mesh-core-wayland = { path = "crates/core/platform/wayland" }
mesh-core-runtime = { path = "crates/core/runtime/host" }
mesh-core-service = { path = "crates/core/extension/service" }
mesh-core-component = { path = "crates/core/ui/component" }
mesh-core-elements = { path = "crates/core/ui/elements" }
mesh-core-icon = { path = "crates/core/ui/icon" }
mesh-core-scripting = { path = "crates/core/runtime/scripting" }
mesh-core-render = { path = "crates/core/ui/render" }
mesh-core-backend = { path = "crates/core/runtime/backend" }
mesh-core-debug = { path = "crates/core/foundation/debug" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
bitflags = "2.11.1"
slotmap = "1.1.1"
