[workspace]
resolver = "2"
members = [
    "crates/core/shell",
    "crates/core/extension/module",
    "crates/core/foundation/capability",
    "crates/core/foundation/events",
    "crates/core/foundation/config",
    "crates/core/foundation/theme",
    "crates/core/foundation/locale",
    "crates/core/foundation/diagnostics",
    "crates/core/platform/wayland",
    "crates/core/runtime/sandbox",
    "crates/core/extension/service",
    "crates/core/ui/component",
    "crates/core/ui/elements",
    "crates/core/ui/icon",
    "crates/core/ui/animation",
    "crates/core/ui/interaction",
    "crates/core/runtime/scripting",
    "crates/core/frontend/host",
    "crates/core/frontend/compiler",
    "crates/core/surface-config",
    "crates/core/frontend/render",
    "crates/core/presentation",
    "crates/core/runtime/backend",
    "crates/tools/cli",
    "crates/core/foundation/debug",
    "crates/tools/lsp",
]

# The shell is CPU-bound in paint/layout/style hot loops; cross-crate inlining
# matters because the pipeline is split across many small workspace crates.
[profile.release]
lto = "thin"
codegen-units = 1

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85"

[workspace.dependencies]
mesh-core-shell = { path = "crates/core/shell" }
mesh-core-module = { path = "crates/core/extension/module" }
mesh-core-capability = { path = "crates/core/foundation/capability" }
mesh-core-events = { path = "crates/core/foundation/events" }
mesh-core-config = { path = "crates/core/foundation/config" }
mesh-core-theme = { path = "crates/core/foundation/theme" }
mesh-core-locale = { path = "crates/core/foundation/locale" }
mesh-core-diagnostics = { path = "crates/core/foundation/diagnostics" }
mesh-core-wayland = { path = "crates/core/platform/wayland" }
mesh-core-runtime = { path = "crates/core/runtime/sandbox" }
mesh-core-service = { path = "crates/core/extension/service" }
mesh-core-component = { path = "crates/core/ui/component" }
mesh-core-elements = { path = "crates/core/ui/elements" }
mesh-core-icon = { path = "crates/core/ui/icon" }
mesh-core-animation = { path = "crates/core/ui/animation" }
mesh-core-interaction = { path = "crates/core/ui/interaction" }
mesh-core-scripting = { path = "crates/core/runtime/scripting" }
mesh-core-frontend-host = { path = "crates/core/frontend/host" }
mesh-core-frontend = { path = "crates/core/frontend/compiler" }
mesh-core-surface-config = { path = "crates/core/surface-config" }
mesh-core-render = { path = "crates/core/frontend/render" }
mesh-core-presentation = { path = "crates/core/presentation" }
mesh-core-backend = { path = "crates/core/runtime/backend" }
mesh-core-debug = { path = "crates/core/foundation/debug" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
semver = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1", features = ["full"] }
bitflags = "2.11.1"
slotmap = "1.1.1"
taffy = { version = "0.10.1", default-features = false, features = ["std", "taffy_tree", "flexbox", "grid", "block_layout", "calc", "content_size"] }
parley = { version = "0.7.0", default-features = false, features = ["std"] }
accesskit = { version = "0.24.0", default-features = false }
anyrender = { version = "0.10.0", default-features = false }
vello_encoding = { version = "0.5.1", default-features = false }
