[package]
name = "mesh-core"
description = "Core runtime and orchestration for MESH shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-plugin = { workspace = true }
mesh-capability = { workspace = true }
mesh-events = { workspace = true }
mesh-config = { workspace = true }
mesh-theme = { workspace = true }
mesh-locale = { workspace = true }
mesh-diagnostics = { workspace = true }
mesh-wayland = { workspace = true }
mesh-runtime = { workspace = true }
mesh-service = { workspace = true }
mesh-component-backend = { workspace = true }
mesh-renderer = { workspace = true }
mesh-ui = { workspace = true }
mesh-scripting = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
