[package]
name = "mesh-core"
description = "Core runtime and orchestration for MESH shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-plugin = { workspace = true }
mesh-capability = { workspace = true }
mesh-events = { workspace = true }
mesh-config = { workspace = true }
mesh-theme = { workspace = true }
mesh-locale = { workspace = true }
mesh-diagnostics = { workspace = true }
mesh-wayland = { workspace = true }
mesh-runtime = { workspace = true }
mesh-service = { workspace = true }
mesh-component-backend = { workspace = true }
mesh-debug = { workspace = true }
mesh-ui = { workspace = true }
mesh-scripting = { workspace = true }
mesh-icon = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
minifb = { version = "0.27", default-features = false, features = ["wayland"] }
font8x8 = "0.3"
fontdb = "0.23"
fontdue = "0.9"
smithay-client-toolkit = { version = "0.19", default-features = false, features = [
  "xkbcommon",
] }
wayland-client = "0.31"
rustix = { version = "0.38", features = ["event", "fs", "mm", "shm"] }
image = "0.24"
resvg = "0.44"
cosmic-text = "0.18"
