[package]
name = "mesh-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Language server for .mesh single-file components"

[[bin]]
name = "mesh-lsp"
path = "src/main.rs"

[dependencies]
mesh-component = { workspace = true }
mesh-elements  = { workspace = true }
mesh-plugin    = { workspace = true }

tower-lsp  = "0.20"
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
