[package]
name = "mesh-plugin"
description = "Plugin manifest, lifecycle, and loading for MESH"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-capability = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
