[package]
name = "mesh-render-engine"
description = "Frontend component rendering, software painting, and presentation for MESH"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-component = { workspace = true }
mesh-debug = { workspace = true }
mesh-icon = { workspace = true }
mesh-plugin = { workspace = true }
mesh-theme = { workspace = true }
mesh-elements = { workspace = true }
mesh-wayland = { workspace = true }

cosmic-text = "0.18"
fontdb = "0.23"
image = "0.24"
minifb = { version = "0.27", default-features = false, features = ["wayland"] }
resvg = "0.44"
rustix = { version = "0.38", features = ["event", "fs", "mm", "shm"] }
serde_json = { workspace = true }
smithay-client-toolkit = { version = "0.19", default-features = false, features = [
  "xkbcommon",
] }
thiserror = { workspace = true }
tracing = { workspace = true }
wayland-client = "0.31"
