[package]
name = "mesh-renderer"
description = "Rendering backend: paints widget trees into Wayland surfaces"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-ui = { workspace = true }
mesh-wayland = { workspace = true }
mesh-theme = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
