[package]
name = "mesh-renderer"
description = "Rendering backend: paints widget trees into Wayland surfaces"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-ui = { workspace = true }
mesh-wayland = { workspace = true }
mesh-theme = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
minifb = { version = "0.27", default-features = false, features = ["wayland"] }
font8x8 = "0.3"
fontdb = "0.23"
fontdue = "0.9"

smithay-client-toolkit = { version = "0.19", default-features = false, features = ["xkbcommon"] }
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3", features = ["client"] }
xkbcommon = "0.8"
rustix = { version = "0.38", features = ["fs", "mm", "shm"] }
memmap2 = "0.9"
