[package]
name = "mesh-runtime"
description = "Extension runtime (Luau sandbox) for MESH plugins"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-capability = { workspace = true }
mesh-events = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
