[package]
name = "mesh-ui"
description = "UI runtime: widget tree, layout, style resolution, event dispatch"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-component = { workspace = true }
mesh-theme = { workspace = true }
mesh-events = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
