[package]
name = "mesh-ui"
description = "Frontend UI model, layout, style, events, and accessibility primitives"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-component = { workspace = true }
mesh-theme = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
