[package]
name = "mesh-phase43-renderer-prototypes"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
taffy = "0.10.1"
# Version target: parley = "0.9.0"; default system font discovery is disabled for this throwaway harness.
parley = { version = "0.9.0", default-features = false, features = ["std"] }
anyrender = "0.8.0"
accesskit = "0.24.0"

[workspace]
