[package]
name = "mesh-core-surface-config"
description = "Surface layout and module settings resolution for MESH"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-core-module = { workspace = true }
mesh-core-wayland = { workspace = true }

serde_json = { workspace = true }
tracing = { workspace = true }
