[package]
name = "mesh-tools-cli"
description = "CLI interface for MESH shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "mesh-shell"
path = "src/main.rs"

[features]
perf-tracy = ["dep:tracing-tracy", "dep:tracy-client"]

[dependencies]
mesh-core-shell = { workspace = true }
mesh-core-module = { workspace = true }
mesh-core-config = { workspace = true }
mesh-core-diagnostics = { workspace = true }

tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { version = "=0.11.4", optional = true, default-features = false, features = ["enable", "ondemand", "only-localhost"] }
tracy-client = { version = "=0.18.4", optional = true, default-features = false, features = ["enable", "ondemand", "only-localhost"] }
