[package]
name = "mesh-tools-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Language server for .mesh single-file components"

[[bin]]
name = "mesh-tools-lsp"
path = "src/main.rs"

[dependencies]
mesh-core-component = { workspace = true }
mesh-core-config    = { workspace = true }
mesh-core-elements  = { workspace = true }
mesh-core-module    = { workspace = true }

tower-lsp  = "0.20"
tokio      = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
toml       = { workspace = true }
tracing    = { workspace = true }
tracing-subscriber = { workspace = true }
