[package]
name = "mesh-core-module"
description = "Module manifest, lifecycle, and loading for MESH"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-core-capability = { workspace = true }
mesh-core-component = { workspace = true }
mesh-core-elements = { workspace = true }
mesh-core-theme = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
