[package]
name = "mesh-core-frontend-host"
description = "Frontend component host contract types for MESH"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-core-capability = { workspace = true }
mesh-core-debug = { workspace = true }
mesh-core-diagnostics = { workspace = true }
mesh-core-elements = { workspace = true }
mesh-core-locale = { workspace = true }
mesh-core-render = { workspace = true }
mesh-core-scripting = { workspace = true }
mesh-core-theme = { workspace = true }
mesh-core-wayland = { workspace = true }

serde_json = { workspace = true }
thiserror = { workspace = true }
