[package]
name = "mesh-core-backend"
description = "Backend plugin Luau runtime orchestration for MESH"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-core-scripting = { workspace = true }

serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
