[package]
name = "mesh-core-runtime"
description = "Extension runtime (Luau sandbox) for MESH modules"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
mesh-core-capability = { workspace = true }
mesh-core-events = { workspace = true }

thiserror = { workspace = true }
tracing = { workspace = true }
